# xnixvim

./: .envrc  .git-blame-ignore-revs  LICENSE  Makefile  README.md  README.org  flake.nix  profile-nvim.sh  welcome.tape
.github/workflows/: ci.yml
config/: config.nix  default.nix  extraConfigLua.nix  highlight.nix  keymaps.nix  modeKeys.nix
config/custom-plugins/git-heat/churn/: Cargo.toml
config/custom-plugins/git-heat/churn/src/: main.rs
config/custom-plugins/markdown-table-sorter/: README.md
config/plugins/: augment.nix  bgwinch.nix  blink-cmp.nix  bufferline.nix  cmp-luasnip-choice.nix  cmp.nix  codediff.nix  colorful-menu.nix  conform-nvim.nix  default.nix  direnv.nix  fff.nix  firenvim.nix  flash.nix  flatten.nix  fugitive.nix  git-heat.nix  gitsigns.nix  himalaya.nix  image.nix  inc-rename.nix  jjdescription.nix  lazydev.nix  lsp-lines.nix  lsp.nix  lspkind.nix  lualine.nix  luasnip.nix  markdown-table-sorter.nix  markview.nix  minuet-ai-nvim.nix  neogit.nix  noice.nix  notify.nix  nvim-colorizer.nix  nvim-lightbulb.nix  nvim-scrollbar.nix  nvim-scrollview.nix  nvim-ufo.nix  oatmeal.nix  (+27 more)
config/plugins/blink-cmp/: default.nix  luasnip-choice.lua  luasnip-choice.nix  spell-source.lua
config/plugins/completion-providers/: augment.nix  cursortab-accept-shutdown.patch  cursortab-nvim.nix  default.nix  minuet-ai-nvim.nix
config/plugins/coq/: coq-lsp.nix  coqtail.nix  default.nix
config/plugins/lsp/: SchemaStore-nvim.nix  default.nix
config/plugins/telescope/: default.nix  telescope-symbols-nvim.nix
config/plugins/which-key/: default.nix
(+7 files in other folders)
